--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Traductor de Texto</title>
 </head>
 
 <body>
-        <h1>Traductor de Texto</h1>
+        <h1>Traductor de Texto Inglés a Español</h1>
         <div>
             <label for="textToTranslate">Texto a Traducir:</label>
             <input type="text" id="textToTranslate" placeholder="Escribe el texto aquí">
